Mon Sep 15 11:08:23 2014  Shota Fukumori  <her@sorah.jp>

	* lib/mkmf.rb (configuration): Make CXXFLAGS customizable.
	  Patch by Kohei Suzuki (eagletmt). [Fixes GH-492]

Mon Sep 15 01:06:35 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#pkg_config): append --cflags to also
	  $CXXFLAGS, as they are often used by C++ compiler.
	  [ruby-core:54532] [Bug #8315]

Mon Sep 15 00:02:20 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/csv.rb (CSV#<<): honor explicitly given encoding.  based on
	  the patch by DAISUKE TANIWAKI <daisuketaniwaki AT gmail.com> at
	  [ruby-core:62113].  [Bug #9766]

Wed Sep 10 23:36:38 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_object.rb: extend timeout.

Wed Sep 10 23:36:38 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_copy_ivar): allocate no memory for empty
	  instance variables.  [ruby-core:64700] [Bug #10191]

Wed Sep 10 23:36:38 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_copy_ivar): extract function to copy instance
	  variables only for T_OBJECT from init_copy.

Wed Sep 10 23:14:42 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	merge r46831 partially. extracted commits are as follows. [Bug #9344]
	https://github.com/k-takata/Onigmo/commit/bdfc1997aa15b6baddaf9a482c6610b32504bd86

	* regcomp.c: Merge Onigmo 5.14.1 25a8a69fc05ae3b56a09.
	  this includes Support for Unicode 7.0 [Bug #9092].

Wed Sep 10 22:58:25 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (Doxyfile): revert r43888, not to require preinstalled
	  ruby.  [ruby-core:64488] [Bug #10161]

Wed Sep 10 03:29:48 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_close): ignore only "closed stream" IOError and
	  NoMethodError, do not swallow other exceptions at the end of
	  block.  [ruby-core:64463] [Bug #10153]

Wed Sep 10 03:17:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/trans/euckr-tbl.rb (EUCKR_TO_UCS_TBL): add missing euro and